# htr-medieval-manuscripts-2026

./: .gitignore  ARTICLE_SCIENTIFIQUE.md  BIAIS_REPRESENTATION.md  CONVENTIONS_NLP.md  CONVENTIONS_TRANSCRIPTION.md  DATA_SOURCES.md  MD5_soutenance.pptx  MODEL_CARD.md  README.md  SCRIPT_SOUTENANCE.md  notebook_colab.ipynb  pyproject.toml  requirements-colab.txt  requirements.txt  run_evaluation.py
dataset_nlp/: exemple_tei.xml
experiments/: journal.jsonl
schemas/: data_contract.schema.json
src/htr/: comparaison.py  corpus_loader.py  dataset_split.py  evaluation_corpus.py  finetuning.py  htr_model.py  kraken_model.py  metrics.py  page_xml.py  pipeline.py  preprocessing.py  segmentation.py  transcripteur_factory.py  visualisation.py
src/nlp/: evaluation_relative.py  graphe_tei.py  ingestion.py  ner.py  normalisation.py  pos_lemmes.py
src/shared/: data_contract.py  utils.py
tests/: test_corpus.py  test_data_contract.py  test_finetuning.py  test_htr_model.py  test_kraken_comparaison.py  test_metrics.py  test_nlp.py  test_pipeline.py  test_preprocessing.py  test_segmentation.py
