[project]
name = "htr-medieval-manuscripts-2026"
version = "1.0.0"
description = "Pipeline HTR + NLP pour manuscrits médiévaux — Projet MD5"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
